--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../FSD/part2/phonebook && npm run build && cp -r build ../../../FSD-part3",
-    "deploy:full":"npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Artt2",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
